# LOs_generation

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: development.yaml  models.yaml  ocr.yaml  production.yaml  prompts.yaml
configs/environments/: ocr.env
docs/: brief.md  developer-guide.md  prd.md
docs/api/: hybrid-chunking-api.yaml
docs/architecture/: architecture.md  coding-standards.md  source-tree.md  tech-stack.md
docs/development/: git-workflow.md
docs/pr/: epic-list.md  goals-and-background-context.md  index.md  requirements.md
docs/prd/: mvp-success-criteria-revised.md  requirements.md  technical-assumptions.md
docs/qa/: comprehensive-testing-strategy.md
docs/qa/assessments/: 2.5-multi-language-model-risk-20250127.md  3.3-pydantic-ai-lo-generation-risk-20250127.md
docs/qa/gates/: 1.2-database-schema.yml  2.5-multi-language-model.yml  3.3-pydantic-ai-lo-generation.yml
docs/stories/: 1.1.foundation-core-infrastructure.story.md  2.1.content-ingestion.story.md  2.2.content-chunking-processing.story.md  2.3.vector-embedding-indexing.story.md  2.4.basic-retrieval-system.story.md  3.1.lo-generation-engine.story.md  3.2.api-endpoints-integration.story.md  4.1.system-testing-deployment.story.md
migrations/: env.py
monitoring/: prometheus.yml
scripts/: dev.py  setup-docker-ocr.bat  setup-docker-ocr.sh  setup.py  test_runner.py
sql/: init.sql
src/: __init__.py  main.py
src/api/: circuit_breaker.py  middleware.py
src/api/v1/: router.py
src/api/v1/endpoints/: config.py  content.py  health.py  jobs.py  learning_objectives.py  monitoring.py  rate_limits.py
src/core/: config.py  config_manager.py  dependencies.py  logging.py  security.py
src/database/: connection.py
src/services/: __init__.py  agentic_chunker.py  base.py  chunking_service.py  document_analyzer.py  generation_service.py  health_service.py  job_service.py  llm_service.py  monitoring.py  ocr_service.py  processing_service.py  structural_chunker.py  vector_service.py
src/tasks/: __init__.py  celery_app.py  generation_tasks.py  monitoring_tasks.py  ocr_tasks.py  processing_tasks.py
tests/: __init__.py  conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_api_endpoints.py  test_e2e_generation.py
tests/performance/: test_performance.py
tests/services/: test_llm_service.py  test_vector_service.py
tests/unit/: test_circuit_breaker.py  test_config_manager.py
